src/serve/tests/requests/create/snapshots/basiliq__serve__tests__requests__create__paths__type_related.snap
---
source: basiliq/src/serve/tests/requests/create/paths.rs
expression: res

---
{
  "errors": {
    "id": "[error id]",
    "status": 400,
    "title": "CibouletteWrongPathType",
    "detail": "Wrong path type, got TypeIdRelated, expected [Type]"
  }
}
